# Chat-room

./: .gitignore  CMakeLists.txt
Client/: Client.sln
Client/Client/: Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  Client_Main.cpp  stdafx.h
Client/Client/Debug/: Client.exe.recipe  vc142.idb
Client/Client/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/Client/DisplayChat/: DisplayChat.cpp  DisplayChat.h  DisplayChat_Main.cpp
Client/Debug/: Client.ilk
Server/: Server.sln
Server/Debug/: Server.ilk
Server/Server/: Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  Server_Main.cpp  Username_Password.txt  stdafx.h
Server/Server/Debug/: vc141.idb
Server/Server/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
